--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
           
       
       - name: Run main.py
-        run: python main.py -u 学习通账号 -p 学习通密码 -l 255665226 #课程id，默认为心理课的
+        run: python main.py -u 18320682469 -p a18320682469 -l 255665226 #课程id，默认为心理课的
